--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --open",
     "build": "ng build",
+    "build-prod": "ng build --configuration production",
+    "start-prod": "npx angular-cli-ghpages --dir=docs/ --cname=fidl.dev",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -23,7 +25,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.0",
+    "@angular-devkit/build-angular": "^14.2.1",
     "@angular/cli": "~14.2.0",
     "@angular/compiler-cli": "^14.0.0-next.0",
     "@types/jasmine": "~4.0.0",
