tiny style changes

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,6 +22,24 @@
     },
     {
       "type": "npm",
+      "script": "build-prod",
+      "isBackground": true,
+      "problemMatcher": {
+        "owner": "typescript",
+        "pattern": "$tsc",
+        "background": {
+          "activeOnStart": true,
+          "beginsPattern": {
+            "regexp": "(.*?)"
+          },
+          "endsPattern": {
+            "regexp": "bundle generation complete"
+          }
+        }
+      }
+    },
+    {
+      "type": "npm",
       "script": "test",
       "isBackground": true,
       "problemMatcher": {
